--- a/index.css
+++ b/index.css
@@ -1,15 +1,85 @@
 #input {
-  background-color: rgb(255, 0, 242);
-  width: 300px
+  visibility: hidden
 }
 
-.slider {
-  background-color: blue;
+.label {
+  height: 32px;
+  width: 55px;
+  display: inline-block;
+  position: relative;  
 }
 
-.switch {
+.span {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(142, 188, 231, 0.61);
+  border-radius: 34px;
+  transition: .4s;
+}
+
+.span::after {
+  position: absolute;
+  content: "";
+  width: 25px;
+  height: 25px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  border-radius: 50%;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .span {
+    background-color: #0b4779;
+  }
+    
+input:checked + .span::after {
+    transform: translateX(22px);
+  }
+
+ #input2 {
+   visibility: hidden;
+ }
+
+#label2 {
   position: relative;
   display: inline-block;
-  width: 60px;
-  height: 34px;
+  height: 32px;
+  width: 55px
+} 
+
+#span2 {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgb(247, 137, 159);
+  border-radius: 34px;
 }
+
+#span2::before{
+  position: absolute;
+  content: '';
+  width: 25px;
+  height: 25px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  border-radius: 50%;
+  transition: .4s;
+}
+
+#input2:checked + #span2 {
+  background-color: rgb(247, 26, 70);
+} 
+
+#input2:checked + #span2::before {
+  transform: translateX(22px);
+} 
