worked out a solution for power button by muting sound

--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(142, 188, 231, 0.61);
+  background-color: rgba(3, 81, 248, 0.788);
   border-radius: 34px;
   transition: .4s;
 }
@@ -27,7 +27,7 @@
   content: "";
   width: 25px;
   height: 25px;
-  left: 4px;
+  right: 4px;
   bottom: 4px;
   background-color: white;
   border-radius: 50%;
@@ -36,11 +36,11 @@
 }
 
 input:checked + .span {
-    background-color: #0b4779;
+    background-color: #9fd0f8;
   }
     
 input:checked + .span::after {
-    transform: translateX(22px);
+    transform: translateX(-22px);
   }
 
  #input2 {
