--- a/index.css
+++ b/index.css
@@ -1,3 +1,56 @@
+#container {
+  background-image: url(https://img.wallpapersafari.com/desktop/1920/1080/67/83/YRe3kg.png);
+  min-height: 100vh;
+  text-align: center;
+  font-family:Arial, Helvetica, sans-serif
+}
+
+#header {
+  color:aliceblue;
+  font-size: 50px;
+}
+
+h1 {
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 25px;
+}
+
+h3 {
+  font-size: 30px
+}
+
+#drum-machine {
+  display: flex;
+  background-color:#546777; 
+  justify-content: center;
+  height: 500px  
+}
+
+#drum-pad-section {
+  display: grid;
+  grid-template-columns: 140px 140px 140px;
+  margin-right: 100px;
+  margin-top: 20px
+}
+
+.drum-pad {
+  width: 120px;
+  height: 120px;
+  margin: 7px 7px 7px 7px;
+  border-radius: 7px;
+  box-shadow: 7px 7px #353434;
+  background-color:rgb(151, 148, 148)
+}
+
+#options {
+  margin-top: 60px;
+
+}
+
+.settings {
+  margin-top: 30px
+}
+
 #input {
   visibility: hidden;
   margin-bottom: 20px
@@ -31,7 +84,6 @@
   bottom: 4px;
   background-color: white;
   border-radius: 50%;
-  -webkit-transition: .4s;
   transition: .4s;
 }
 
