--- a/index.css
+++ b/index.css
@@ -25,7 +25,7 @@ h3 {
 
 #drum-machine {
   display: flex;
-  background-color:#546777; 
+  background-color:#6787a1; 
   justify-content: center;
   height: 500px;  
   width: 800px;
@@ -47,7 +47,7 @@ h3 {
   margin: 7px 7px 7px 7px;
   border-radius: 7px;
   box-shadow: 7px 7px #353434;
-  background-color:rgb(151, 148, 148)
+  background-color:rgb(88, 128, 189)
 }
 
 #divider {
