--- a/index.css
+++ b/index.css
@@ -71,14 +71,14 @@ h3 {
   margin-bottom: 20px
 }
 
-.label {
+#label {
   height: 32px;
   width: 55px;
   display: inline-block;
   position: relative;  
 }
 
-.span {
+#span {
   position: absolute;
   cursor: pointer;
   top: 0;
@@ -90,7 +90,7 @@ h3 {
   transition: .4s;
 }
 
-.span::after {
+span::before {
   position: absolute;
   content: "";
   width: 25px;
@@ -102,11 +102,11 @@ h3 {
   transition: .4s;
 }
 
-input:checked + .span {
+#input:checked + #span {
     background-color: #9fd0f8;
   }
     
-input:checked + .span::after {
+#input:checked + span::before {
     transform: translateX(-22px);
   }
 
@@ -133,7 +133,7 @@ input:checked + .span::after {
   border-radius: 34px;
 }
 
-#span2::before{
+span2::before{
   position: absolute;
   content: '';
   width: 25px;
@@ -149,7 +149,7 @@ input:checked + .span::after {
   background-color: rgb(247, 26, 70);
 } 
 
-#input2:checked + #span2::before {
+#input2:checked + span2::before {
   transform: translateX(22px);
 } 
 
